# Python-System-Test-Framework

./: README.md
system_test_framework/: pyproject.toml
system_test_framework/configs/: local.yaml
system_test_framework/src/stf.egg-info/: PKG-INFO  SOURCES.txt
system_test_framework/src/stf/interfaces/: base.py  simulated_device.py
system_test_framework/src/stf/reporting/: artifacts.py  logging.py  metadata.py
system_test_framework/src/stf/runner/: cli.py  run_pytest.py
system_test_framework/tests/: conftest.py
system_test_framework/tests/configs/: test.yaml
system_test_framework/tests/system/: test_boot_sequence.py  test_fault_recovery.py  test_long_run_stability.py
